--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body,html{
+
+body,
+html {
     font-family: "Kanit", sans-serif;
     display: flex;
     justify-content: center;
@@ -7,7 +9,9 @@ body,html{
     height: 100vh;
     width: 100%;
     user-select: none;
+    background-image: radial-gradient(at 50% 50%, rgba(1, 22, 44, 0.856), rgb(9, 11, 17));
 }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
